# XDbot2

./: .env.prod  .gitignore  .gitmodules  .pre-commit-config.yaml  1.py  404.html  CNAME  Dockerfile  LICENSE  README.md  README_en.md  TODO.md  TODO.txt  XDbot2_Update.py  bot.py  docker-compose.yml  hashmap.json  index.html  invite.html  package.json  pyproject.toml  requirements.txt  update.py
.github/: reviewer-lottery.yml
assets/: app.B_8_egcs.js  app.BgUBZ9Yy.js  app.Bh6z0Ssu.js  app.C9UOWKNd.js  app.CBz5NVi3.js  app.D1NOSJOF.js  app.DHgJPz3N.js  app.DXQi6iJe.js  app.DaF0iK3O.js  app.Dl3DorWZ.js  app.DyXsB1Os.js  app.H-uK5vRR.js  app.Re23AJRR.js  app.ZJtsm0_O.js  games_ftt.md.19Fi9VUz.js  games_ftt.md.19Fi9VUz.lean.js  games_ftt.md.49qNMos5.js  games_ftt.md.49qNMos5.lean.js  games_ftt.md.8LXKdk46.js  games_ftt.md.8LXKdk46.lean.js  games_ftt.md.BAI3NUWK.js  games_ftt.md.BAI3NUWK.lean.js  games_ftt.md.BTvh5ZJm.js  games_ftt.md.BTvh5ZJm.lean.js  games_ftt.md.BUryfBRp.js  games_ftt.md.BUryfBRp.lean.js  games_ftt.md.BVi6cRSr.js  games_ftt.md.BVi6cRSr.lean.js  games_ftt.md.BXAblolu.js  games_ftt.md.BXAblolu.lean.js  games_ftt.md.B_Cfd8aj.js  games_ftt.md.B_Cfd8aj.lean.js  games_ftt.md.BchxD5lu.js  games_ftt.md.BchxD5lu.lean.js  games_ftt.md.ByIPgoQy.js  games_ftt.md.ByIPgoQy.lean.js  games_ftt.md.BzK7fx-c.js  games_ftt.md.BzK7fx-c.lean.js  games_ftt.md.CCn8eXNL.js  games_ftt.md.CCn8eXNL.lean.js  (+106 more)
docs/: index.md  invite.md
games/: ftt.html
lang/: zh-hans.yaml
man/: README.md
rules/: HelloWorld.json  YiFanZhuZhu-Get.json  YiFanZhuZhu.json  _rules.json
(+446 files in other folders)
